@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+4/19/24: Added ability to call some general plugin functions from Python.
+
 4/18/24: Add script commands for reporting and setting the variable governing
 the components of the frame filename.
 
